--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "linkedin-profile-scraper": "^2.3.1",
     "next": "15.5.2",
     "react": "19.1.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0"
   },
